<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <com.android.figmahomework.custom.FadingImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.45"
        android:backgroundTint="@color/white"
        android:src="@drawable/login_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/white"
        android:textAllCaps="false"
        android:elevation="20dp"
        android:paddingHorizontal="25dp"
        android:paddingVertical="15dp"
        android:text="@string/as_guest"
        android:textColor="@color/black"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:maxWidth="200dp"
        android:maxHeight="200dp"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/tvLoginDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="33dp"
        android:textSize="19sp"
        android:textColor="@color/gray_text"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/red_button"
        android:textAllCaps="false"
        android:layout_marginHorizontal="33dp"
        android:paddingHorizontal="25dp"
        android:paddingVertical="20dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:cornerRadius="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLoginDescription" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/gray_button"
        android:textAllCaps="false"
        android:layout_marginHorizontal="33dp"
        android:paddingHorizontal="25dp"
        android:paddingVertical="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/blue_button_text"
        app:cornerRadius="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

    <View
        android:id="@+id/vLoginLine"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="15dp"
        android:alpha="0.3"
        android:layout_marginHorizontal="33dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignInFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/blue_button"
        android:textAllCaps="false"
        android:layout_marginHorizontal="33dp"
        android:paddingHorizontal="25dp"
        android:paddingVertical="20dp"
        android:text="Sign in with Facebook"
        android:textColor="@color/white"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vLoginLine" />


</androidx.constraintlayout.widget.ConstraintLayout>